[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -24, -48, -16, -48, 8, -48, 32, -48, 41, -44, 45, -39, 48, -32, 48, 31, 47, 36, 45, 40, 42, 44, 37, 47, 33, 49, -33, 49, -39, 46, -42, 42, -44, 38, -47, 32, -48, -33, -45, -39, -43, -42, -40, -44, -36, -47, -30, -48 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 46 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 38.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 8 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 1 )
speed = Vector2( 800, 1000 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -46 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -200 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -37 )
shape = SubResource( 2 )

[node name="BumperDetector" type="Area2D" parent="."]
modulate = Color( 0.709804, 0, 1, 1 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BumperDetector"]
modulate = Color( 0.588235, 0.34902, 0.34902, 1 )
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="BumperDetector" to="." method="_on_BumperDetector_area_entered"]
